--- a/public/css/play.css
+++ b/public/css/play.css
@@ -13,5 +13,6 @@ body{
     margin: auto;
     width: 100vmin;
     height: 100vmin;
-    background-color: darkgray;
+    background-color: #333333;
+    
 }
